crates/outbox-publisher/tests/ui/11_empty_kind.stderr
error: `kind` must not be empty
 --> tests/ui/11_empty_kind.rs:5:9
  |
5 | #[event(kind = "", aggregate = "user")]
  |         ^^^^^^^^^
